--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-social",
   "version": "2.0.0",
   "description": "A MERN stack based social media application",
-  "author": "Shama Hoque",
+  "author": "Naitik",
   "license": "MIT",
   "keywords": [
     "react",
